# vimms-lair-scrape

./: README.md  main.py  pyproject.toml
.kiro/specs/tui-game-scraper/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
logs/: app.log.1  app.log.2
src/: __init__.py  main.py
src/models/: __init__.py  config.py  game.py  progress.py
src/services/: __init__.py  config.py  download_manager.py  errors.py  esde_compat.py  filesystem.py  game_scraper.py  http_client.py  logging.py
src/ui/: __init__.py  app.py
src/ui/screens/: __init__.py  base.py  data_view.py  download.py  main_menu.py  scraping.py  settings.py
src/ui/widgets/: __init__.py  progress.py
tests/: __init__.py  test_config_service.py  test_data_view.py  test_download_manager.py  test_error_handling.py  test_esde_compat.py  test_game_scraper.py  test_logging_service.py  test_setup.py  test_ui_navigation.py
